force-app/main/default/objects/Session__c/fields/Available_Slots__c.field-meta.xml
<CustomField>
    <fullName>Available_Slots__c</fullName>
    <description>Calculates the number of slots still available for booking by subtracting the Booked_Slots__c from the Capacity__c, offering real-time availability data.</description>
    <formula>Capacity__c - Booked_Slots__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Slots</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>