force-app/main/default/objects/Session__c/fields/Booked_Slots__c.field-meta.xml
<CustomField>
    <fullName>Booked_Slots__c</fullName>
    <description>Tracks the number of slots already booked by guests for the experience, aiding in reservation management.</description>
    <label>Booked Slots</label>
    <summarizedField>Booking__c.Number_of_Guests__c</summarizedField>
    <summaryForeignKey>Booking__c.Session__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>