force-app/main/default/objects/Session__c/fields/Experience__c.field-meta.xml
<CustomField>
    <fullName>Experience__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The parent experience that this object is scheduled based on.</description>
    <label>Experience</label>
    <referenceTo>Experience__c</referenceTo>
    <relationshipLabel>Experience Sessions</relationshipLabel>
    <relationshipName>Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>